fix overflow on slider

--- a/src/BestSellers/bestsellers.scss
+++ b/src/BestSellers/bestsellers.scss
@@ -35,6 +35,7 @@
                 max-width: 100%;
                 display: flex;
                 justify-content: center;
+                overflow: hidden;
             }
 
             img {
