--- a/src/Footer/footer.scss
+++ b/src/Footer/footer.scss
@@ -6,6 +6,14 @@
     padding: 15px;
     font-family: MilanoReg;
 
+    .logowrapper {
+        font-size: 10px;
+
+        div {
+            margin-top: 25px;
+        }
+    }
+
     input {
         border-radius: 0;
     }
@@ -80,6 +88,26 @@
             }
         }
 
+        .logowrapper {
+            display: flex;
+            height: 125px;
+
+            img {
+                width: 40px;
+                margin-right: 15px;
+            }
+
+            div {
+                display: flex;
+                align-items: center;
+                margin-top: 0;
+            }
+
+            p {
+                margin: 0;
+            }
+        }
+
         div.newsletter-col {
             margin-bottom: 15px;
 
@@ -119,26 +147,6 @@
 
             .links {
                 width: 100%;
-            }
-        }
-
-        .logowrapper {
-            display: flex;
-            font-size: 12px;
-            height: 125px;
-
-            img {
-                width: 55px;
-                margin-right: 15px;
-            }
-
-            div {
-                display: flex;
-                align-items: center;
-            }
-
-            p {
-                margin: 0;
             }
         }
     }
